syntax = "proto3";
package composable.xcvm.v1beta1;

import "gogoproto/gogo.proto";

option go_package = "x/xcvm/types";

// GenesisState defines the module various parameters when first
// initialized
message GenesisState {
    uint64 intent_id = 1;
}
