syntax = "proto3";
package composable.xcvm.v1beta1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "x/xcvm/types";

// Boundary defines the number of tx limit and block per tx generation time
message TransferIntent {
  string source_address = 1;
  string destination_address = 2;
  string client_id = 3;
  string amount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Uint",
    (gogoproto.nullable) = false
  ];
}
